test/driver/attributes/fail05.expected
File "fail05.ml", line 1, characters 14-17:
Error: Attribute `foo' was silently dropped
