test/driver/attributes/fail05.ml
let x = (42 [@foo])
